--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ice Cream Budget</title>
+    <script src="scripts.js"></script>
 </head>
 <body>
 <h6>Project</h6>
